--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Chika-Md",
-  "version": "1.2.3",
-  "description": "WhatsApp Using Lib Baileys Multi Device",
+  "name": "HalloBot",
+  "version": "0.1",
+  "description": "Recode WhatsApp Bot",
   "main": "riy.js",
   "type": "commonjs",
   "scripts": {
@@ -18,7 +18,7 @@
     "bot-md",
     "multi-device"
   ],
-  "author": "Dika Ardnt.",
+  "author": "kira",
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "^4.1.0",
